--- a/css/mopr.css
+++ b/css/mopr.css
@@ -4,7 +4,7 @@ background-color: black;
          background-image: url(http://ropr.ryanroper.com/img/crtback.gif);
          line-height: 27.2px;
 margin:5px;
-color: #AAFFCC;
+color: #68f9f9;
 font-family: 'VenetiaMonitorRegular';
 font-size: 28px;
    text-shadow: 0px 0px 3px #00CC00, 4px 0px 5px #338800, 3px 0px 3px #225500;
